--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/main.ts"
-  },
+  "dev": "ts-node-dev src/main.ts",
+  "build": "tsc",
+  "start": "node dist/main.js"
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
