--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "type": "commonjs",
   "scripts": {
-  "dev": "ts-node-dev src/main.ts",
-  "build": "tsc",
-  "start": "node dist/main.js"
- },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "dev": "ts-node-dev src/main.ts",
+    "build": "tsc",
+    "start": "node dist/main.js"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -24,7 +21,6 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^25.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
